fixed cropping functionality
fixed cropping
made logo icon on company page a square (with rounded corners)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,7 @@ h1 {
   background-color: #ffffff;
   top: 0;
   left: 0;
+  z-index: 1;
 }
 
 .loading_dot {
